# slib

./: .gitignore  CMakeLists.txt  README.md  meson.build  slib.sln
Tests/: BinarySearchTests.cpp  LinkedListTests.cpp  ListTests.cpp  PathTests.cpp  StaticAllocListTests.cpp  StringTests.cpp  Tests.vcxproj  Tests.vcxproj.filters
VSProject/: .clang-format  Dummy.cpp  slib.vcxproj  slib.vcxproj.filters
include/slib/: ArrayList.hpp  BinarySearch.hpp  Bitset.hpp  BufferReader.hpp  DynamicLibrary.hpp  HeapArray.hpp  Intrinsic.hpp  Iterator.hpp  LinkedList.hpp  List.hpp  MinMax.hpp  Path.hpp  StaticAllocList.hpp  String.hpp  Subprocess.hpp  Win32Util.hpp
src/: BufferReader.cpp  DynamicLibraryLinux.cpp  DynamicLibraryWin32.cpp  Path.cpp  String.cpp  SubprocessLinux.cpp  SubprocessWin32.cpp  Win32Util.cpp  meson.build
